--- a/estilo.css
+++ b/estilo.css
@@ -44,7 +44,7 @@ li:hover{
 }
 
 #imagem_fundo1 {
-    background: url(img/fundo.jpg);
+    background: url(fundo.jpg);
     width: 100%;
     height: 100vh; /* Usando viewport height para cobrir a tela verticalmente */
     text-align: center;
@@ -77,7 +77,7 @@ li:hover{
 }
 
 #imagem_fundo {
-    background: url("img/fundo.jpg");
+    background: url("fundo.jpg");
     height: 100vh; /* Usando viewport height para cobrir a tela verticalmente */
     width: 100%;
     text-align: center;
